install_data([
    'nip4/compat/8.9/Colour.def',
    'nip4/compat/8.9/_convert.def',
    'nip4/compat/8.9/Filter.def',
    'nip4/compat/8.9/_generate.def',
    'nip4/compat/8.9/Histogram.def',
    'nip4/compat/8.9/Image.def',
    'nip4/compat/8.9/_joe_extra.def',
    'nip4/compat/8.9/_joe_utilities.def',
    'nip4/compat/8.9/_list.def',
    'nip4/compat/8.9/Magick.def',
    'nip4/compat/8.9/_magick.def',
    'nip4/compat/8.9/Math.def',
    'nip4/compat/8.9/Matrix.def',
    'nip4/compat/8.9/Object.def',
    'nip4/compat/8.9/_Object.def',
    'nip4/compat/8.9/_predicate.def',
    'nip4/compat/8.9/_stdenv.def',
    'nip4/compat/8.9/Tasks.def',
    'nip4/compat/8.9/_types.def',
    'nip4/compat/8.9/Widgets.def',
    'nip4/compat/_compat.def',
    'nip4/data/AdobeRGB1998.icc',
    'nip4/data/cmyk.icm',
    'nip4/data/examples/1_point_mosaic/1pt_mosaic.ws',
    'nip4/data/examples/1_point_mosaic/cd1.1.jpg',
    'nip4/data/examples/1_point_mosaic/cd1.2.jpg',
    'nip4/data/examples/1_point_mosaic/cd2.1.jpg',
    'nip4/data/examples/1_point_mosaic/cd2.2.jpg',
    'nip4/data/examples/1_point_mosaic/cd3.1.jpg',
    'nip4/data/examples/1_point_mosaic/cd3.2.jpg',
    'nip4/data/examples/1_point_mosaic/cd4.1.jpg',
    'nip4/data/examples/1_point_mosaic/cd4.2.jpg',
    'nip4/data/examples/2_point_mosaic/2pts_mosaic.ws',
    'nip4/data/examples/2_point_mosaic/example_im_01.jpg',
    'nip4/data/examples/2_point_mosaic/example_im_02.jpg',
    'nip4/data/examples/2_point_mosaic/example_im_03.jpg',
    'nip4/data/examples/2_point_mosaic/example_im_04.jpg',
    'nip4/data/examples/2_point_mosaic/example_im_05.jpg',
    'nip4/data/examples/2_point_mosaic/example_im_06.jpg',
    'nip4/data/examples/2_point_mosaic/full_image.jpg',
    'nip4/data/examples/businesscard/businesscard.ws',
    'nip4/data/examples/businesscard/slanted_oval_vase2.jpg',
    'nip4/data/examples/clone/clone.ws',
    'nip4/data/examples/clone/example_im_01.png',
    'nip4/data/examples/clone/example_im_02.png',
    'nip4/data/examples/framing/framing_complex.png',
    'nip4/data/examples/framing/framing_corner.png',
    'nip4/data/examples/framing/framing_distorted_frame.png',
    'nip4/data/examples/framing/framing_picture.jpg',
    'nip4/data/examples/framing/framing.ws',
    'nip4/data/examples/logo/logo2.ws',
    'nip4/data/examples/manual_balance/manual_balance.ws',
    'nip4/data/examples/manual_balance/mask_01.png',
    'nip4/data/examples/manual_balance/mask_02.png',
    'nip4/data/examples/manual_balance/mask_03.png',
    'nip4/data/examples/manual_balance/mask_control.png',
    'nip4/data/examples/manual_balance/simp_base.png',
    'nip4/data/examples/overlays_and_blending/blend_example_ir.jpg',
    'nip4/data/examples/overlays_and_blending/blend_example_vis.jpg',
    'nip4/data/examples/overlays_and_blending/blend_example_xray.jpg',
    'nip4/data/examples/overlays_and_blending/overlay_blend.ws',
    'nip4/data/examples/print_test_image.v',
    'nip4/data/examples/registering/example_im_1.jpg',
    'nip4/data/examples/registering/example_im_2.jpg',
    'nip4/data/examples/registering/example_im_3.jpg',
    'nip4/data/examples/registering/example_im_4.jpg',
    'nip4/data/examples/registering/registering.ws',
    'nip4/data/macbeth_lab_d50.mat',
    'nip4/data/macbeth_lab_d65.mat',
    'nip4/data/nip2-icon.ico',
    'nip4/data/rachel.con',
    'nip4/data/sRGB.icm',
    'nip4/start/Colour.def',
    'nip4/start/_convert.def',
    'nip4/start/Filter.def',
    'nip4/start/_generate.def',
    'nip4/start/Histogram.def',
    'nip4/start/Image.def',
    'nip4/start/_joe_extra.def',
    'nip4/start/_joe_utilities.def',
    'nip4/start/_list.def',
    'nip4/start/_magick.def',
    'nip4/start/Magick.def',
    'nip4/start/Math.def',
    'nip4/start/Matrix.def',
    'nip4/start/_Object.def',
    'nip4/start/Object.def',
    'nip4/start/_predicate.def',
    'nip4/start/Preferences.ws',
    'nip4/start/_stdenv.def',
    'nip4/start/Tasks.def',
    'nip4/start/_types.def',
    'nip4/start/Widgets.def',
  ],
  install_dir: get_option('datadir'),
  preserve_path: true,
)
