install_data([
    'nip4/compat/7.8/Histogram.def',
    'nip4/compat/7.8/Capture.def',
    'nip4/compat/7.8/_generate.def',
    'nip4/compat/7.8/Rotate.def',
    'nip4/compat/7.8/_types.def',
    'nip4/compat/7.8/X_ray.def',
    'nip4/compat/7.8/Morphology.def',
    'nip4/compat/7.8/Colour.def',
    'nip4/compat/7.8/_stdenv.def',
    'nip4/compat/7.8/Math.def',
    'nip4/compat/7.8/Mosaic.def',
    'nip4/compat/7.8/_convert.def',
    'nip4/compat/7.8/_list.def',
    'nip4/compat/7.8/_errors.def',
    'nip4/compat/7.8/Format.def',
    'nip4/compat/7.8/Image.def',
    'nip4/compat/7.8/Resize.def',
    'nip4/compat/7.8/Statistics.def',
    'nip4/compat/7.8/_predicate.def',
    'nip4/compat/7.8/Filter.def',
    'nip4/compat/7.8/Print.def',
    'nip4/compat/7.8/New.def',

    'nip4/compat/7.9/Histogram.def',
    'nip4/compat/7.9/Capture.def',
    'nip4/compat/7.9/_generate.def',
    'nip4/compat/7.9/Rotate.def',
    'nip4/compat/7.9/_types.def',
    'nip4/compat/7.9/X_ray.def',
    'nip4/compat/7.9/Morphology.def',
    'nip4/compat/7.9/Colour.def',
    'nip4/compat/7.9/_stdenv.def',
    'nip4/compat/7.9/Math.def',
    'nip4/compat/7.9/Mosaic.def',
    'nip4/compat/7.9/_convert.def',
    'nip4/compat/7.9/_list.def',
    'nip4/compat/7.9/_errors.def',
    'nip4/compat/7.9/Format.def',
    'nip4/compat/7.9/Image.def',
    'nip4/compat/7.9/Resize.def',
    'nip4/compat/7.9/Statistics.def',
    'nip4/compat/7.9/_predicate.def',
    'nip4/compat/7.9/Filter.def',
    'nip4/compat/7.9/Print.def',
    'nip4/compat/7.9/New.def',

    'nip4/compat/7.10/Histogram.def',
    'nip4/compat/7.10/_generate.def',
    'nip4/compat/7.10/_types.def',
    'nip4/compat/7.10/Colour.def',
    'nip4/compat/7.10/_joe_extra.def',
    'nip4/compat/7.10/_stdenv.def',
    'nip4/compat/7.10/Math.def',
    'nip4/compat/7.10/_convert.def',
    'nip4/compat/7.10/_joe_utilities.def',
    'nip4/compat/7.10/_list.def',
    'nip4/compat/7.10/Format.def',
    'nip4/compat/7.10/Image.def',
    'nip4/compat/7.10/Widgets.def',
    'nip4/compat/7.10/Tasks.def',
    'nip4/compat/7.10/_predicate.def',
    'nip4/compat/7.10/Matrix.def',
    'nip4/compat/7.10/Filter.def',

    'nip4/compat/7.12/Histogram.def',
    'nip4/compat/7.12/Preferences.ws',
    'nip4/compat/7.12/_generate.def',
    'nip4/compat/7.12/_types.def',
    'nip4/compat/7.12/Colour.def',
    'nip4/compat/7.12/_joe_extra.def',
    'nip4/compat/7.12/_stdenv.def',
    'nip4/compat/7.12/Math.def',
    'nip4/compat/7.12/_convert.def',
    'nip4/compat/7.12/_joe_utilities.def',
    'nip4/compat/7.12/_list.def',
    'nip4/compat/7.12/Format.def',
    'nip4/compat/7.12/Image.def',
    'nip4/compat/7.12/Widgets.def',
    'nip4/compat/7.12/Tasks.def',
    'nip4/compat/7.12/_predicate.def',
    'nip4/compat/7.12/Matrix.def',
    'nip4/compat/7.12/Filter.def',

    'nip4/compat/7.14/Histogram.def',
    'nip4/compat/7.14/Preferences.ws',
    'nip4/compat/7.14/_generate.def',
    'nip4/compat/7.14/_types.def',
    'nip4/compat/7.14/Colour.def',
    'nip4/compat/7.14/_joe_extra.def',
    'nip4/compat/7.14/_stdenv.def',
    'nip4/compat/7.14/Math.def',
    'nip4/compat/7.14/_convert.def',
    'nip4/compat/7.14/_joe_utilities.def',
    'nip4/compat/7.14/_list.def',
    'nip4/compat/7.14/_Object.def',
    'nip4/compat/7.14/Image.def',
    'nip4/compat/7.14/Object.def',
    'nip4/compat/7.14/Widgets.def',
    'nip4/compat/7.14/Tasks.def',
    'nip4/compat/7.14/_predicate.def',
    'nip4/compat/7.14/Matrix.def',
    'nip4/compat/7.14/Filter.def',

    'nip4/compat/7.16/Histogram.def',
    'nip4/compat/7.16/Preferences.ws',
    'nip4/compat/7.16/_generate.def',
    'nip4/compat/7.16/_types.def',
    'nip4/compat/7.16/Colour.def',
    'nip4/compat/7.16/_joe_extra.def',
    'nip4/compat/7.16/_stdenv.def',
    'nip4/compat/7.16/Math.def',
    'nip4/compat/7.16/_convert.def',
    'nip4/compat/7.16/_joe_utilities.def',
    'nip4/compat/7.16/_list.def',
    'nip4/compat/7.16/_Object.def',
    'nip4/compat/7.16/Image.def',
    'nip4/compat/7.16/Object.def',
    'nip4/compat/7.16/Widgets.def',
    'nip4/compat/7.16/Tasks.def',
    'nip4/compat/7.16/_predicate.def',
    'nip4/compat/7.16/Matrix.def',
    'nip4/compat/7.16/Filter.def',

    'nip4/compat/7.24/Histogram.def',
    'nip4/compat/7.24/_generate.def',
    'nip4/compat/7.24/_types.def',
    'nip4/compat/7.24/Colour.def',
    'nip4/compat/7.24/_joe_extra.def',
    'nip4/compat/7.24/_stdenv.def',
    'nip4/compat/7.24/Math.def',
    'nip4/compat/7.24/_convert.def',
    'nip4/compat/7.24/_joe_utilities.def',
    'nip4/compat/7.24/_list.def',
    'nip4/compat/7.24/_Object.def',
    'nip4/compat/7.24/Image.def',
    'nip4/compat/7.24/Object.def',
    'nip4/compat/7.24/Widgets.def',
    'nip4/compat/7.24/Tasks.def',
    'nip4/compat/7.24/_predicate.def',
    'nip4/compat/7.24/Matrix.def',
    'nip4/compat/7.24/Filter.def',

    'nip4/compat/7.26/Histogram.def',
    'nip4/compat/7.26/_generate.def',
    'nip4/compat/7.26/_types.def',
    'nip4/compat/7.26/Colour.def',
    'nip4/compat/7.26/_joe_extra.def',
    'nip4/compat/7.26/_stdenv.def',
    'nip4/compat/7.26/Math.def',
    'nip4/compat/7.26/_convert.def',
    'nip4/compat/7.26/_joe_utilities.def',
    'nip4/compat/7.26/_list.def',
    'nip4/compat/7.26/_Object.def',
    'nip4/compat/7.26/Image.def',
    'nip4/compat/7.26/Object.def',
    'nip4/compat/7.26/Widgets.def',
    'nip4/compat/7.26/Tasks.def',
    'nip4/compat/7.26/_predicate.def',
    'nip4/compat/7.26/Matrix.def',
    'nip4/compat/7.26/Filter.def',

    'nip4/compat/7.28/Histogram.def',
    'nip4/compat/7.28/_generate.def',
    'nip4/compat/7.28/_types.def',
    'nip4/compat/7.28/Colour.def',
    'nip4/compat/7.28/_joe_extra.def',
    'nip4/compat/7.28/_stdenv.def',
    'nip4/compat/7.28/Math.def',
    'nip4/compat/7.28/_convert.def',
    'nip4/compat/7.28/_joe_utilities.def',
    'nip4/compat/7.28/_list.def',
    'nip4/compat/7.28/_Object.def',
    'nip4/compat/7.28/Image.def',
    'nip4/compat/7.28/Object.def',
    'nip4/compat/7.28/Widgets.def',
    'nip4/compat/7.28/Tasks.def',
    'nip4/compat/7.28/_predicate.def',
    'nip4/compat/7.28/Matrix.def',
    'nip4/compat/7.28/Filter.def',

    'nip4/compat/7.38/Histogram.def',
    'nip4/compat/7.38/_generate.def',
    'nip4/compat/7.38/_types.def',
    'nip4/compat/7.38/Colour.def',
    'nip4/compat/7.38/_joe_extra.def',
    'nip4/compat/7.38/_stdenv.def',
    'nip4/compat/7.38/Math.def',
    'nip4/compat/7.38/_convert.def',
    'nip4/compat/7.38/_joe_utilities.def',
    'nip4/compat/7.38/_list.def',
    'nip4/compat/7.38/_Object.def',
    'nip4/compat/7.38/Image.def',
    'nip4/compat/7.38/Object.def',
    'nip4/compat/7.38/Widgets.def',
    'nip4/compat/7.38/Tasks.def',
    'nip4/compat/7.38/_predicate.def',
    'nip4/compat/7.38/Matrix.def',
    'nip4/compat/7.38/Filter.def',

    'nip4/compat/7.40/Histogram.def',
    'nip4/compat/7.40/Preferences.ws',
    'nip4/compat/7.40/_generate.def',
    'nip4/compat/7.40/_types.def',
    'nip4/compat/7.40/_magick.def',
    'nip4/compat/7.40/Colour.def',
    'nip4/compat/7.40/_joe_extra.def',
    'nip4/compat/7.40/_stdenv.def',
    'nip4/compat/7.40/Math.def',
    'nip4/compat/7.40/_convert.def',
    'nip4/compat/7.40/_joe_utilities.def',
    'nip4/compat/7.40/_list.def',
    'nip4/compat/7.40/_Object.def',
    'nip4/compat/7.40/Image.def',
    'nip4/compat/7.40/Object.def',
    'nip4/compat/7.40/Widgets.def',
    'nip4/compat/7.40/Tasks.def',
    'nip4/compat/7.40/_predicate.def',
    'nip4/compat/7.40/Matrix.def',
    'nip4/compat/7.40/Magick.def',
    'nip4/compat/7.40/Filter.def',

    'nip4/compat/8.2/Histogram.def',
    'nip4/compat/8.2/Preferences.ws',
    'nip4/compat/8.2/_generate.def',
    'nip4/compat/8.2/_types.def',
    'nip4/compat/8.2/_magick.def',
    'nip4/compat/8.2/Colour.def',
    'nip4/compat/8.2/_joe_extra.def',
    'nip4/compat/8.2/_stdenv.def',
    'nip4/compat/8.2/Math.def',
    'nip4/compat/8.2/_convert.def',
    'nip4/compat/8.2/_joe_utilities.def',
    'nip4/compat/8.2/_list.def',
    'nip4/compat/8.2/_Object.def',
    'nip4/compat/8.2/Image.def',
    'nip4/compat/8.2/Object.def',
    'nip4/compat/8.2/Widgets.def',
    'nip4/compat/8.2/Tasks.def',
    'nip4/compat/8.2/_predicate.def',
    'nip4/compat/8.2/Matrix.def',
    'nip4/compat/8.2/Magick.def',
    'nip4/compat/8.2/Filter.def',

    'nip4/compat/8.3/Histogram.def',
    'nip4/compat/8.3/Preferences.ws',
    'nip4/compat/8.3/_generate.def',
    'nip4/compat/8.3/_types.def',
    'nip4/compat/8.3/_magick.def',
    'nip4/compat/8.3/Colour.def',
    'nip4/compat/8.3/_joe_extra.def',
    'nip4/compat/8.3/_stdenv.def',
    'nip4/compat/8.3/Math.def',
    'nip4/compat/8.3/_convert.def',
    'nip4/compat/8.3/_joe_utilities.def',
    'nip4/compat/8.3/_list.def',
    'nip4/compat/8.3/_Object.def',
    'nip4/compat/8.3/Image.def',
    'nip4/compat/8.3/Object.def',
    'nip4/compat/8.3/Widgets.def',
    'nip4/compat/8.3/Tasks.def',
    'nip4/compat/8.3/_predicate.def',
    'nip4/compat/8.3/Matrix.def',
    'nip4/compat/8.3/Magick.def',
    'nip4/compat/8.3/Filter.def',

    'nip4/compat/8.4/Histogram.def',
    'nip4/compat/8.4/Preferences.ws',
    'nip4/compat/8.4/_generate.def',
    'nip4/compat/8.4/_types.def',
    'nip4/compat/8.4/_magick.def',
    'nip4/compat/8.4/Colour.def',
    'nip4/compat/8.4/_joe_extra.def',
    'nip4/compat/8.4/_stdenv.def',
    'nip4/compat/8.4/Math.def',
    'nip4/compat/8.4/_convert.def',
    'nip4/compat/8.4/_joe_utilities.def',
    'nip4/compat/8.4/_list.def',
    'nip4/compat/8.4/_Object.def',
    'nip4/compat/8.4/Image.def',
    'nip4/compat/8.4/Object.def',
    'nip4/compat/8.4/Widgets.def',
    'nip4/compat/8.4/Tasks.def',
    'nip4/compat/8.4/_predicate.def',
    'nip4/compat/8.4/Matrix.def',
    'nip4/compat/8.4/Magick.def',
    'nip4/compat/8.4/Filter.def',

    'nip4/compat/8.5/Histogram.def',
    'nip4/compat/8.5/Preferences.ws',
    'nip4/compat/8.5/_generate.def',
    'nip4/compat/8.5/_types.def',
    'nip4/compat/8.5/_magick.def',
    'nip4/compat/8.5/Colour.def',
    'nip4/compat/8.5/_joe_extra.def',
    'nip4/compat/8.5/_stdenv.def',
    'nip4/compat/8.5/Math.def',
    'nip4/compat/8.5/_convert.def',
    'nip4/compat/8.5/_joe_utilities.def',
    'nip4/compat/8.5/_list.def',
    'nip4/compat/8.5/_Object.def',
    'nip4/compat/8.5/Image.def',
    'nip4/compat/8.5/Object.def',
    'nip4/compat/8.5/Widgets.def',
    'nip4/compat/8.5/Tasks.def',
    'nip4/compat/8.5/_predicate.def',
    'nip4/compat/8.5/Matrix.def',
    'nip4/compat/8.5/Magick.def',
    'nip4/compat/8.5/Filter.def',

    'nip4/compat/8.6/Histogram.def',
    'nip4/compat/8.6/Preferences.ws',
    'nip4/compat/8.6/_generate.def',
    'nip4/compat/8.6/_types.def',
    'nip4/compat/8.6/_magick.def',
    'nip4/compat/8.6/Colour.def',
    'nip4/compat/8.6/_joe_extra.def',
    'nip4/compat/8.6/_stdenv.def',
    'nip4/compat/8.6/Math.def',
    'nip4/compat/8.6/_convert.def',
    'nip4/compat/8.6/_joe_utilities.def',
    'nip4/compat/8.6/_list.def',
    'nip4/compat/8.6/_Object.def',
    'nip4/compat/8.6/Image.def',
    'nip4/compat/8.6/Object.def',
    'nip4/compat/8.6/Widgets.def',
    'nip4/compat/8.6/Tasks.def',
    'nip4/compat/8.6/_predicate.def',
    'nip4/compat/8.6/Matrix.def',
    'nip4/compat/8.6/Magick.def',
    'nip4/compat/8.6/Filter.def',

    'nip4/compat/8.9/Histogram.def',
    'nip4/compat/8.9/_generate.def',
    'nip4/compat/8.9/_types.def',
    'nip4/compat/8.9/_magick.def',
    'nip4/compat/8.9/Colour.def',
    'nip4/compat/8.9/_joe_extra.def',
    'nip4/compat/8.9/_stdenv.def',
    'nip4/compat/8.9/Math.def',
    'nip4/compat/8.9/_convert.def',
    'nip4/compat/8.9/_joe_utilities.def',
    'nip4/compat/8.9/_list.def',
    'nip4/compat/8.9/_Object.def',
    'nip4/compat/8.9/Image.def',
    'nip4/compat/8.9/Object.def',
    'nip4/compat/8.9/Widgets.def',
    'nip4/compat/8.9/Tasks.def',
    'nip4/compat/8.9/_predicate.def',
    'nip4/compat/8.9/Matrix.def',
    'nip4/compat/8.9/Magick.def',
    'nip4/compat/8.9/Filter.def',

    'nip4/compat/_compat.def',

    'nip4/data/AdobeRGB1998.icc',
    'nip4/data/cmyk.icm',
    'nip4/data/examples/1_point_mosaic/1pt_mosaic.ws',
    'nip4/data/examples/1_point_mosaic/cd1.1.jpg',
    'nip4/data/examples/1_point_mosaic/cd1.2.jpg',
    'nip4/data/examples/1_point_mosaic/cd2.1.jpg',
    'nip4/data/examples/1_point_mosaic/cd2.2.jpg',
    'nip4/data/examples/1_point_mosaic/cd3.1.jpg',
    'nip4/data/examples/1_point_mosaic/cd3.2.jpg',
    'nip4/data/examples/1_point_mosaic/cd4.1.jpg',
    'nip4/data/examples/1_point_mosaic/cd4.2.jpg',
    'nip4/data/examples/2_point_mosaic/2pts_mosaic.ws',
    'nip4/data/examples/2_point_mosaic/example_im_01.jpg',
    'nip4/data/examples/2_point_mosaic/example_im_02.jpg',
    'nip4/data/examples/2_point_mosaic/example_im_03.jpg',
    'nip4/data/examples/2_point_mosaic/example_im_04.jpg',
    'nip4/data/examples/2_point_mosaic/example_im_05.jpg',
    'nip4/data/examples/2_point_mosaic/example_im_06.jpg',
    'nip4/data/examples/2_point_mosaic/full_image.jpg',
    'nip4/data/examples/businesscard/businesscard.ws',
    'nip4/data/examples/businesscard/slanted_oval_vase2.jpg',
    'nip4/data/examples/clone/clone.ws',
    'nip4/data/examples/clone/example_im_01.png',
    'nip4/data/examples/clone/example_im_02.png',
    'nip4/data/examples/framing/framing_complex.png',
    'nip4/data/examples/framing/framing_corner.png',
    'nip4/data/examples/framing/framing_distorted_frame.png',
    'nip4/data/examples/framing/framing_picture.jpg',
    'nip4/data/examples/framing/framing.ws',
    'nip4/data/examples/logo/logo2.ws',
    'nip4/data/examples/manual_balance/manual_balance.ws',
    'nip4/data/examples/manual_balance/mask_01.png',
    'nip4/data/examples/manual_balance/mask_02.png',
    'nip4/data/examples/manual_balance/mask_03.png',
    'nip4/data/examples/manual_balance/mask_control.png',
    'nip4/data/examples/manual_balance/simp_base.png',
    'nip4/data/examples/overlays_and_blending/blend_example_ir.jpg',
    'nip4/data/examples/overlays_and_blending/blend_example_vis.jpg',
    'nip4/data/examples/overlays_and_blending/blend_example_xray.jpg',
    'nip4/data/examples/overlays_and_blending/overlay_blend.ws',
    'nip4/data/examples/print_test_image.v',
    'nip4/data/examples/registering/example_im_1.jpg',
    'nip4/data/examples/registering/example_im_2.jpg',
    'nip4/data/examples/registering/example_im_3.jpg',
    'nip4/data/examples/registering/example_im_4.jpg',
    'nip4/data/examples/registering/registering.ws',
    'nip4/data/macbeth_lab_d50.mat',
    'nip4/data/macbeth_lab_d65.mat',
    'nip4/data/nip2-icon.ico',
    'nip4/data/rachel.con',
    'nip4/data/sRGB.icm',
    'nip4/start/Colour.def',
    'nip4/start/_convert.def',
    'nip4/start/Filter.def',
    'nip4/start/_generate.def',
    'nip4/start/Histogram.def',
    'nip4/start/Image.def',
    'nip4/start/_joe_extra.def',
    'nip4/start/_joe_utilities.def',
    'nip4/start/_list.def',
    'nip4/start/_magick.def',
    'nip4/start/Magick.def',
    'nip4/start/Math.def',
    'nip4/start/Matrix.def',
    'nip4/start/_Object.def',
    'nip4/start/Object.def',
    'nip4/start/_predicate.def',
    'nip4/start/Preferences.ws',
    'nip4/start/_stdenv.def',
    'nip4/start/Tasks.def',
    'nip4/start/_types.def',
    'nip4/start/Widgets.def',
    'nip4/start/_vips7compat.def',
  ],
  install_dir: get_option('datadir'),
  preserve_path: true,
)
