marshal = gnome.genmarshal(
  'nip4marshal',
  prefix: 'nip4',
  sources: 'nip4marshal.list',
)

resources = gnome.compile_resources(
  'nip4-gresources',
  'gtk/nip4.gresources.xml',
  source_dir: 'gtk',
)

# headers for enum scanning
headers = files (
  'tilesource.h',
  'tilecache.h',
)

sources = files (
  'action.c',
  'app.c',
  'builtin.c',
  'class.c',
  'classmodel.c',
  'column.c',
  'columnview.c',
  'compile.c',
  'displaybar.c',
  'dump.c',
  'expr.c',
  'editview.c',
  'filemodel.c',
  'formula.c',
  'fuzzy.c',
  'graphicview.c',
  'gtkutil.c',
  'heap.c',
  'heapmodel.c',
  'icontainer.c',
  'iimage.c',
  'colour.c',
  'colourview.c',
  'iimageview.c',
  'iarrow.c',
  'iregion.c',
  'iregiongroup.c',
  'iregiongroupview.c',
  'iregionview.c',
  'imagedisplay.c',
  'regionview.c',
  'valueview.c',
  'imageinfo.c',
  'imageui.c',
  'imagewindow.c',
  'infobar.c',
  'iobject.c',
  'itext.c',
  'itextview.c',
  'itextview.c',
  'ientry.c',
  'link.c',
  'log.c',
  'main.c',
  'mainwindow.c',
  'managed.c',
  'managedfile.c',
  'managedgobject.c',
  'managedstring.c',
  'matrix.c',
  'matrixview.c',
  'model.c',
  'number.c',
  'numberview.c',
  'option.c',
  'expression.c',
  'expressionview.c',
  'optionview.c',
  'pathname.c',
  'pathnameview.c',
  'fontname.c',
  'fontnameview.c',
  'slider.c',
  'sliderview.c',
  'toggle.c',
  'toggleview.c',
  'path.c',
  'plot.c',
  'plotdisplay.c',
  'plotview.c',
  'plotwindow.c',
  'predicate.c',
  'prefcolumnview.c',
  'prefs.c',
  'prefworkspaceview.c',
  'program.c',
  'progress.c',
  'properties.c',
  'reduce.c',
  'rhs.c',
  'rhsview.c',
  'row.c',
  'rowview.c',
  'saveoptions.c',
  'recover.c',
  'secret.c',
  'spin.c',
  'string.c',
  'stringview.c',
  'subcolumn.c',
  'subcolumnview.c',
  'symbol.c',
  'tile.c',
  'tilecache.c',
  'tilesource.c',
  'tool.c',
  'toolkit.c',
  'toolkitgroup.c',
  'toolkitgroupview.c',
  'toolkitview.c',
  'toolview.c',
  'trace.c',
  'tree.c',
  'tslider.c',
  'util.c',
  'view.c',
  'vipsobject.c',
  'vobject.c',
  'workspace.c',
  'workspacedefs.c',
  'workspacegroup.c',
  'workspacegroupview.c',
  'workspaceroot.c',
  'workspaceview.c',
  'workspaceviewlabel.c',
  'kplot/array.c',
  'kplot/border.c',
  'kplot/bucket.c',
  'kplot/buffer.c',
  'kplot/colours.c',
  'kplot/draw.c',
  'kplot/grid.c',
  'kplot/hist.c',
  'kplot/kdata.c',
  'kplot/kplot.c',
  'kplot/label.c',
  'kplot/margin.c',
  'kplot/mean.c',
  'kplot/plotctx.c',
  'kplot/reallocarray.c',
  'kplot/stddev.c',
  'kplot/tic.c',
  'kplot/vector.c',
)

parse_c = custom_target('parse.c',
  output: ['parse.c', 'parse.h'],
  input: 'parse.y',
  command: [yacc,
    '--output=@OUTPUT0@',
    '--header=@OUTPUT1@',
    '@INPUT@',
  ],
)

lex_c = custom_target('lex.c',
  output: 'lex.c',
  input: 'lex.l',
  command: [lex,
    '--outfile=@OUTPUT0@',
    '@INPUT@',
  ],
)

enumtypes = gnome.mkenums(
  'enumtypes',
  sources: headers,
  h_template: 'enumtypes.h.in',
  c_template: 'enumtypes.c.in',
)

nip4 = executable('nip4', [
    enumtypes,
    marshal,
    resources,
    parse_c,
    lex_c,
    sources,
    'main-gui.c',
  ],
  dependencies: nip4_deps,
  win_subsystem: 'windows',
  install: true,
)

nip4_batch = executable('nip4-batch', [
    enumtypes,
    marshal,
    resources,
    parse_c,
    lex_c,
    sources,
    'main-batch.c',
  ],
  dependencies: nip4_deps,
  win_subsystem: 'console',
  install: true,
)
